fixed some spacing on css style

--- a/style.css
+++ b/style.css
@@ -3,18 +3,22 @@ h1{
     display:block;
     font-size:2em;
     font-weight: bold;
-    margin-top: 100px;
+    margin-top: 65px;
     margin-left: 20px;
 }
 .box{
   border: 1px solid green ;
   background-color: teal;
 }
+#hstyle{
+    font-family:cursive;
+    font-weight: bold;
+}
 h2{
     display:block;
     font-size:20px;
     font-weight: bold;
-    margin-top: auto;
+    margin-top: 35px;
     margin-left: 20px;
 }
 li a{
